# agentcore-book

./: README.md
appendix/: README.md
chapter1/: 02_converse_stream.py  03_tool_use.py  README.md  pyproject.toml
chapter10/: 01_browser.py  02_code_interpreter.py  README.md  pyproject.toml
chapter11/: README.md
chapter11/langfuse/: pyproject.toml
chapter12/: README.md  pyproject.toml
chapter13/: README.md  handson-memo.txt
chapter13/bookchecker/: .gitignore  package.json
chapter13/bookchecker/agent/: AGENTS.md  README.md
chapter13/bookchecker/agent/agentcore/: .gitignore
chapter13/bookchecker/agent/agentcore/.llm-context/: README.md  agentcore.ts  aws-targets.ts
chapter13/bookchecker/agent/agentcore/cdk/: .gitignore  .prettierrc  README.md  cdk.json  jest.config.js  package.json  tsconfig.json
chapter13/bookchecker/agent/app/BookChecker/: .gitignore  README.md  calendar_tool.py  main.py  pyproject.toml
chapter13/bookchecker/agent/app/BookChecker/mcp_client/: client.py
chapter13/bookchecker/agent/app/BookChecker/memory/: session.py
chapter13/bookchecker/agent/app/BookChecker/model/: load.py
chapter14/: 01-retrieve_and_generate.py  02-retrieve-tool.py  03-mcp-tool.py  README.md  pyproject.toml
chapter15/: README.md  pyproject.toml
chapter15/cdk/: package.json
chapter15/cdk/lib/: expense-agent-stack.ts
chapter15/src/: agent.py
chapter3/: 03-1_invoke.py  03-2_invoke.py  03-3_invoke.py  04-1_model.py  04-3_model.py  05_prompt.py  06_tools.py  12_agents_as_tools.py  16-3_a2a_client.py  18_evals.py  README.md  pyproject.toml
chapter3/handson/: pyproject.toml
chapter4/: README.md  main.py  pyproject.toml
chapter5/: 00_invoke_harness.py  01_streaming.py  02_runtime.ts  04_async.py  06_mcp_client.py  07_a2a_server.py  README.md  pyproject.toml
chapter5/handson/: pyproject.toml
chapter5/handson/app/MyAgent/: main.py
chapter6/: README.md  pyproject.toml
chapter7/: README.md  pyproject.toml
chapter8/: 02_http_target.py  03_interceptor.py  README.md  pyproject.toml
(+2 files in other folders)
