[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "book-checker"
version = "0.1.0"
description = "AgentCore Runtime Application using Strands SDK"
requires-python = ">=3.14"
dependencies = [
    "aws-opentelemetry-distro == 0.17.0",
    "bedrock-agentcore == 1.6.4",
    "boto3[crt] == 1.42.96",
    "mcp == 1.27.0",
    "strands-agents == 1.38.0",
    "strands-agents-tools == 0.5.1",
    "nest-asyncio == 1.6.0",
    "playwright == 1.58.0",
    "requests == 2.33.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
