[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BookChecker"
version = "0.1.0"
description = "AgentCore Runtime Application using Strands SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aws-opentelemetry-distro",
    "bedrock-agentcore >= 1.0.3",
    "botocore[crt] >= 1.35.0",
    "mcp >= 1.19.0",
    "nest-asyncio==1.6.0",
    "playwright==1.58.0",
    "requests==2.33.1",
    "strands-agents >= 1.13.0",
    "strands-agents-tools==0.5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
